--- a/.github/workflows/generate_coding_json.yml
+++ b/.github/workflows/generate_coding_json.yml
@@ -17,5 +17,16 @@ jobs:
           ruby-version: 3.0
           bundler-cache: true
       - name: rake generate_coding_json
+        id: generate-coding-json
         run: |
-          bundle exec rake generate_coding_json
+          rake generate_coding_json
+      - name: Commit new coding.json
+        env:
+          JSON_VERSION: ${{steps.generate-coding-json.outputs.CODING_JSON_VERSION}}
+        run: |
+          git config --global user.name 'HackerPen Bot'
+          git config --global user.email 'hackerpen@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git checkout "${GITHUB_REF:11}"
+          git commit -am "Update coding.json version to ${JSON_VERSION}"
+          git push
