Fix Github Action

--- a/.github/workflows/generate_coding_json.yml
+++ b/.github/workflows/generate_coding_json.yml
@@ -3,7 +3,8 @@ name: Generate Coding JSON
 on:
   push:
     paths:
-      - coding/
+      - 'coding/**'
+      - 'coding/**/**'
     branches:
       - main
 
