--- a/.github/workflows/generate_coding_json.yml
+++ b/.github/workflows/generate_coding_json.yml
@@ -29,5 +29,6 @@ jobs:
           git config --global user.email 'hackerpen@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git checkout "${GITHUB_REF:11}"
-          git commit -am "Update coding.json version to ${JSON_VERSION}"
+          git add .
+          git commit -m "Update coding.json version to ${JSON_VERSION}"
           git push
