--- a/coding/three_sum/meta.yml
+++ b/coding/three_sum/meta.yml
@@ -8,6 +8,10 @@ description:
 solution:
   en: SOLUTION_en.md
 starter_code:
+  c: "starter.c"
+  cpp: "starter.cpp"
+  go: "starter.go"
   javascript: "starter.js"
   python: "starter.py"
+  ruby: "starter.rb"
 industries:
