Add Github Link and name

--- a/coding/climbing_stairs/meta.yml
+++ b/coding/climbing_stairs/meta.yml
@@ -1,5 +1,6 @@
 ---
 identifier: coding_climbing_stairs
+name: "Climbing Stairs"
 category: coding
 subcategory: "dynamic_programming"
 difficulty: easy
