--- a/coding/find_minimum_in_rotated_sorted_array/meta.yml
+++ b/coding/find_minimum_in_rotated_sorted_array/meta.yml
@@ -1,5 +1,6 @@
 ---
 identifier: coding_find_minimum_in_sorted_array
+name: "Find Minimum in Sorted Array"
 category: coding
 subcategory: "array"
 difficulty: medium
