--- a/coding/maximum_product_subarray/meta.yml
+++ b/coding/maximum_product_subarray/meta.yml
@@ -1,5 +1,6 @@
 ---
-identifier: coding_maximu_product_subarray
+identifier: coding_maximum_product_subarray
+name: "Maximum Product Subarray"
 category: coding
 subcategory: "array"
 difficulty: medium
