--- a/coding/merge_two_sorted_linked_lists/meta.yml
+++ b/coding/merge_two_sorted_linked_lists/meta.yml
@@ -1,5 +1,6 @@
 ---
 identifier: coding_merge_two_sorted_linked_lists
+name: "Merge Two Sorted Linked Lists"
 category: coding
 subcategory: "linked list"
 difficulty: easy
