--- a/system_design/spending_tracker/meta.yml
+++ b/system_design/spending_tracker/meta.yml
@@ -1,5 +1,6 @@
 ---
 identifier: system_design_spending_tracker
+name: "Spending Tracker"
 category: system_design
 difficulty: medium
 description:
