add name to template

--- a/_system_design_template/meta.yml
+++ b/_system_design_template/meta.yml
@@ -1,5 +1,6 @@
 ---
 identifier: some_unique_question_identifier
+name: "Some Unique Identifier"
 category: system_design
 difficulty: medium
 description:
